# pong

./: .clang-format  CMakeLists.txt  makefile
include/: ball_entity.hpp  game_context.hpp  game_entity.hpp  game_state.hpp  game_window.hpp  paddle_entity.hpp  shared.hpp
src/: ball_entity.cpp  game_state.cpp  game_window.cpp  main.cpp  paddle_entity.cpp
